Fix Spacing

--- a/style.scss
+++ b/style.scss
@@ -22,3 +22,7 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.total-members-count-number {
+	margin-right: 3.5px;
+}
